Add custom favicon.ico with wrench icon
- Created favicon.ico with wrench/screwdriver icon design
- Added favicon link to base.html template
- Icon represents repair/maintenance theme
- Multiple sizes included (16x16, 24x24, 32x32)
- Dark theme compatible design

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>{% block title %}Repair Tracker{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
