--- a/templates/login.html
+++ b/templates/login.html
@@ -10,10 +10,7 @@
                 Sign in to your account
             </h2>
             <p class="mt-2 text-center text-sm text-gray-400">
-                Or
-                <a href="/register" class="font-medium text-blue-400 hover:text-blue-300">
-                    create a new account
-                </a>
+                Contact your administrator to create a new account
             </p>
         </div>
         <form class="mt-8 space-y-6" id="login-form">
